[package]
edition = "2021"
name = "repl"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "squirt"
path = "src/main.rs"

[lib]
name = "repl"
path = "src/lib.rs"

[dependencies]
eval = {path = "../eval"}
object = {path = "../object"}
